--- a/Views/results.cshtml
+++ b/Views/results.cshtml
@@ -1,3 +1,3 @@
-<h1>Your word score is</h1>
-<h2>@Model</h2>
+<h1>Your word repeats</h1>
+<h2>@Model times</h2>
 <a href="/">Click here to go to home</a>
